assets/css/application.styl
@import "sofiapro.css"
@import "droid-sans-mono.css"
@import "twitter/bootstrap.min.css"
@import "twitter/bootstrap-responsive.min.css"
@import "font-awesome.css"
@import "font-awesome-ie7.css"
@import "nib"

bucket-header-border-color = #ddd
selected-bucket-header-color = #10B3F0

task-border-color = #ddd
task-background-color = #eee
selected-task-border-color = selected-bucket-header-color
selected-task-background-color = #f9f9f9

command-box-border-color = #ddd
command-box-font = 'DroidSansMonoRegular'

body
  font: 16px "SofiaProLightRegular", "Lucida Grande", Helvetica, Arial, sans-serif
  padding-top: 1em
  padding-bottom: 2em

  h1.title
    text-align: center
    margin-bottom: 1em

  .task
    clear: both
    border: 1px solid task-border-color
    border-radius: 5px
    margin: 5px 0 0 0
    padding: 10px
    background-color: task-background-color

  .bucket
    h3
      text-align: center
      border-bottom: 1px solid bucket-header-border-color
      padding-bottom: 5px
      .text
        display: block
      .number
        border-radius: 20px
        display: inline-block
        background-color: #202020
        color: #fff
        width: 27px
        margin-right: 5px

    &.selected
      h3
        color: selected-bucket-header-color
        border-color: selected-bucket-header-color
        .number
          background-color: selected-bucket-header-color
          color: #fff

  .bucket.selected
    .task
      background-color: selected-task-border-color
      color: #fff
      border: none
    .task.selected
      border: 1px solid selected-task-border-color
      background-color: selected-task-background-color
      color: selected-task-border-color

  #command-box
    position: fixed
    bottom: 0
    width: 100%
    height: 26px
    border-top: 1px solid command-box-border-color
    visibility: hidden

    #command
      width: 100%
      border: none
      outline: none
      font-family: command-box-font

    &.visible
      visibility: visible

#user-box
  position: absolute
  border-radius: 5px
  top: 50%
  left: 50%
  width: 170px
  height: 82px
  margin-left: -(@width / 2)
  margin-top: -(@height / 2)

  h3
    text-align: center
    color: #eee
    margin-bottom: 1em

  span
    display: block
    font-size: 1.3em
    color: #ccc

#session
  position: absolute
  top: 0
  right: 20px
  z-index: 100
  background-color: selected-bucket-header-color
  color: #fff
  padding: 0.5em 1em 0.5em 1em
  font-size: 0.8em
  font-weight: bold

